# fingerprint-tensorRT

./: README.md
fingerprint_C/: CMakeLists.txt  fingerprint_C.aps  fingerprint_C.sln  fingerprint_C.vcxproj  fingerprint_C.vcxproj.filters  main.cpp  resource.h
fingerprint_C/x64/Debug/: fingerprint_C.exe.recipe  vc142.idb
fingerprint_C/x64/Debug/fingerprint_C.tlog/: fingerprint_C.lastbuildstate
fingerprint_C/x64/Release/: fingerprint_C.exe.recipe  fingerprint_C.iobj  fingerprint_C.ipdb  fingerprint_C.vcxproj.FileListAbsolute.txt
fingerprint_C/x64/Release/fingerprint_C.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  fingerprint_C.lastbuildstate  fingerprint_C.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  rc.command.1.tlog  rc.read.1.tlog  rc.write.1.tlog
